[package]
name = "esp32-hd44780"
version = "0.1.0"
authors = ["gustavobat"]
edition = "2021"
categories = ["embedded", "hardware"]
keywords = ["embedded", "svc", "idf", "esp-idf", "esp32"]
description = "Minimal example of using an ESP32 MCU to drive an H44780 LCD"

[dependencies]
esp-idf-sys = { version = "0.31", features = ["binstart"] }
esp-idf-svc = "0.42.1"
esp-idf-hal = "0.38"
embedded-svc = "0.22"
embedded-hal = "0.2"
anyhow = "1"
hd44780-driver = { git = "https://github.com/JohnDoneth/hd44780-driver", branch = "master" }

[build-dependencies]
embuild = "0.29"
anyhow = "1"
